Создано с помощью Colaboratory

--- a/Part 1. Framework.ipynb
+++ b/Part 1. Framework.ipynb
@@ -1,1 +1,43 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Part 1. Framework.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNhVUByTeRVyXM14BNjDU8t",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sedol1339/neural-networks/blob/main/Part%201.%20Framework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rFBFIsjcERJt"
+      },
+      "source": [
+        "123"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
